--- a/app/templates/company.twig
+++ b/app/templates/company.twig
@@ -90,10 +90,16 @@
 	</section><!-- end total-section -->
 
 	<!-- begin about-egg -->
-	<section class="about-egg uk-text-center" uk-scrollspy="cls: slide-up;">
+	<section class="about-egg uk-text-center" uk-scrollspy="cls: slide-up show;">
 		<div class="uk-container">
 			<div class="about-egg__img">
-				<img src="img/media/egg-2.png" alt="">
+				<svg width="100%" height="100%" class="yellow-ellipse-3">
+				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-3"></use>
+				</svg>
+				<svg width="100%" height="100%" class="yellow-ellipse-4">
+				  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
+				</svg>
+				<img src="img/media/egg.png" alt="">
 			</div>
 			<div class="about-egg__text">
 				<p>
@@ -168,7 +174,7 @@
 
 	<section class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
-			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Потребитель нам важнее всего</h2>
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Заботимся о наших покупателях</h2>
 
 			<ul class="typebox-list mask" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 
@@ -197,7 +203,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-13.png" alt="" uk-img>
+							<img data-src="img/media/box-type-15.jpg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -214,7 +220,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-14.png" alt="" uk-img>
+							<img data-src="img/media/box-type-16.jpg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
@@ -369,7 +375,7 @@
 	<!-- begin news-section -->
 	<section class="news-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
-			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Новости компании «Лето-Групп»</h2>
+			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Наши новости</h2>
 			<ul class="news-list uk-grid uk-child-width-1-3@m uk-child-width-1-2@s" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 				<li class="news-item">
 					<article>
