--- a/app/templates/includes/header/main-nav.twig
+++ b/app/templates/includes/header/main-nav.twig
@@ -21,7 +21,7 @@
 			</li>
 			<li>
 				<span class="logo1">
-					<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
+					<a href="/"><img src="img/media/logo.svg" alt="Leto"></a>
 				</span>
 			</li>
 			<li>
