--- a/app/templates/contacts.twig
+++ b/app/templates/contacts.twig
@@ -225,17 +225,17 @@
 			</ul>
 
 			<ul class="uk-switcher">
-				<li>
+				<li data-img="img/media/moscow-pin.png">
 					<div class="slogan uk-text-center">Московская обл., БЦ Рига Ленд, корпус 6, подъезд 5, офис № 207</div>
-					<img src="img/media/test1.jpg" alt="">
+					<!-- <img src="img/media/test1.jpg" alt=""> -->
 				</li>
-				<li>
+				<li data-img="img/media/belgorod-pin.png">
 					<div class="slogan uk-text-center">Белгородская обл., Шебекинский р-н, с. Белянка, ул. Комсомольская, д.57</div>
-					<img src="img/media/test2.jpg" alt="">
+					<!-- <img src="img/media/test2.jpg" alt=""> -->
 				</li>
-				<li>
+				<li data-img="img/media/tula2.png">
 					<div class="slogan uk-text-center">Тульская область, Заокский р-н, пос. Сосновый</div>
-					<img src="img/media/test3.jpg" alt="">
+					<!-- <img src="img/media/test3.jpg" alt=""> -->
 				</li>
 			</ul>
 		</div><!-- end custom-tabs -->
