--- a/app/sass/content/main-banner.scss
+++ b/app/sass/content/main-banner.scss
@@ -77,6 +77,8 @@
 		position: absolute;
 		top: 0;
 		left: 50%;
+		width: 100%;
+		max-width: 1000px;
 		padding: 11%;
 		color: $white;
 		text-align: center;
